Make independent mapping rules always enabled when APIAP is on
THREESCALE-3341

We need to make independent_mapping_rules always enabled for
services acting as product.

--- a/app/views/api/integrations/apicast/shared/_mapping_rules.html.slim
+++ b/app/views/api/integrations/apicast/shared/_mapping_rules.html.slim
@@ -1,4 +1,4 @@
-- if current_account.provider_can_use?(:independent_mapping_rules)
+- if current_account.independent_mapping_rules_enabled?
   fieldset.inputs.independent_mapping_rules
     legend
       span
