--- a/app/views/shared/provider/navigation/service/_integration.html.slim
+++ b/app/views/shared/provider/navigation/service/_integration.html.slim
@@ -7,7 +7,7 @@
          title: 'Methods & Metrics',
          path: admin_service_metrics_path(@service)
 
-- if current_account.provider_can_use?(:independent_mapping_rules)
+- if current_account.independent_mapping_rules_enabled?
   = render vertical_nav_item,
            title: 'Mapping Rules',
            path: admin_service_proxy_rules_path(@service)
