--- a/app/views/provider/admin/dashboards/_ajax_load.html.slim
+++ b/app/views/provider/admin/dashboards/_ajax_load.html.slim
@@ -3,11 +3,9 @@ javascript:
     let widgetPath = #{json widget.path}
     let serviceId = #{json widget.params[:service_id]}
 
-    const { loadAudienceWidget, loadServiceWidget } = window.dashboardWidget
-
     if (serviceId === null) {
-      loadAudienceWidget(widgetPath)
+      dashboardWidget.loadAudienceWidget(widgetPath)
     } else {
-      loadServiceWidget(serviceId, widgetPath)
+      dashboardWidget.loadServiceWidget(serviceId, widgetPath)
     }
   })
