--- a/app/views/api/services/forms/_authentication_settings.html.slim
+++ b/app/views/api/services/forms/_authentication_settings.html.slim
@@ -1,5 +1,5 @@
 = f.inputs 'Authentication Settings', class: 'auth-settings-wrapper' do
-
+  - is_service_mesh = @service.proxy.deployment_option === 'service_mesh_istio'
   - # oidc
   - is_oidc = @service.backend_version === 'oidc'
   = f.inputs id: 'service_proxy_authentication_method_oidc_settings', disabled: !is_oidc, class: "auth-settings #{'hidden' unless is_oidc}"
@@ -17,7 +17,7 @@
     = f.input :auth_app_key
 
   - # Commons
-  = f.inputs id: 'common-settings', disabled: is_oidc, class: "#{'hidden' if is_oidc}" do
+  = f.inputs disabled: is_service_mesh, class: "apicast-only-settings #{'hidden' if is_service_mesh}" do
     = f.inputs 'Credentials Location' do
       = f.input :credentials_location, as: :radio,
               collection: Proxy.credentials_collection
