--- a/app/views/shared/proxy_rules/_table.html.slim
+++ b/app/views/shared/proxy_rules/_table.html.slim
@@ -11,6 +11,13 @@ table#mapping_rules.data
       th = sortable('proxy_rules.position', 'Position')
       th.actions
         = link_to 'Add Mapping Rule', new_rule_path, class: 'action add'
+    tr.search
+      = search_form do |s|
+        th
+        th colspan="3"
+          = s.text_field :query, size: 20, class: :query, placeholder: 'Search for Pattern'
+        th colspan="4"
+          = s.submit 'Search'
   tbody
     - proxy_rules.each do |rule|
       tr
