--- a/app/views/shared/provider/navigation/_vertical_nav_item.html.slim
+++ b/app/views/shared/provider/navigation/_vertical_nav_item.html.slim
@@ -2,6 +2,7 @@
 - path = section[:path]
 - items = section[:items]
 - is_section_active = active_section == section[:id]
+- integration_out_of_date = title == 'Integration' && out_of_date_config
 
 - if items == nil
   li.pf-c-nav__item class=('pf-m-current' if is_section_active)
@@ -12,7 +13,7 @@
   li.pf-c-nav__item class='pf-m-expandable pf-m-expanded' class=('pf-m-current' if is_section_active)
     a.pf-c-nav__link href='#!'
       = title
-      i.fa.fa-exclamation-triangle
+      i class=('fa fa-exclamation-triangle' if integration_out_of_date)
     section.pf-c-nav__subnav
       ul.pf-c-nav__simple-list
         - items.each do |item|
