--- a/app/views/api/metrics/_link_to_mapping_rules.slim
+++ b/app/views/api/metrics/_link_to_mapping_rules.slim
@@ -1,4 +1,4 @@
-= link_to edit_admin_service_integration_path(@service, anchor: 'mapping-rules'), data: { behavior: 'open-mapping-rules', bubble: 'mapping' } do
+= link_to (apiap? ? new_admin_service_proxy_rule_path(@service) : edit_admin_service_integration_path(@service, anchor: 'mapping-rules')), data: { behavior: 'open-mapping-rules', bubble: 'mapping' } do
   - if metric.proxy_rules.any?
     i.fa.fa-check
   - else
