--- a/app/views/api/metrics/edit.html.erb
+++ b/app/views/api/metrics/edit.html.erb
@@ -1,11 +1,9 @@
-<% if @metric.child? %>
-  <% content_for :sublayout_title, "Edit Method" %>
-<% else %>
-  <% content_for :sublayout_title, "Edit Metric" %>
-<% end %>
+<% method_or_metric = @metric.child? ? "method" : "metric" %>
+<% content_for :sublayout_title, "Edit #{method_or_metric.capitalize}" %>
+
 <%= semantic_form_for @metric, :url => admin_service_metric_path(@service, @metric) do |form| %>
   <%= render 'form', :form => form %>
 <% end %>
 <% unless @metric.default?(:hits) %>
-  <%= delete_button_for admin_service_metric_path(@service, @metric), data: {:confirm => "Removing this metric will affect all plans that contain this metric. Are you sure? "} %>
+  <%= delete_button_for admin_service_metric_path(@service, @metric), data: {:confirm => "Removing this #{method_or_metric} will affect all plans that contain this #{method_or_metric}, all associated mapping rules will be deleted too. Are you sure? "} %>
 <% end %>
