[settings] Toggling readOnly attr on prod/staging urls
* Depending on APIcast self managed or 3scale managed integration
method and apicast_custom_url setting
* Refactored toggling methods.

--- a/app/views/api/integrations/apicast/shared/_proxy_endpoints.html.slim
+++ b/app/views/api/integrations/apicast/shared/_proxy_endpoints.html.slim
@@ -1,15 +1,19 @@
 - is_service_mesh = proxy.service_mesh_integration?
-= f.inputs "API gateway", class: "apicast-only-settings #{'hidden' if is_service_mesh}", disabled: is_service_mesh do
+- is_self_managed = proxy.self_managed?
+- is_read_only = !apicast_custom_urls? && !is_self_managed
+= f.inputs "API gateway", id: 'proxy-endpoints', data: {apicast_custom_urls: apicast_custom_urls?}, class: "apicast-only-settings #{'hidden' if is_service_mesh}", disabled: is_service_mesh do
   = f.input :sandbox_endpoint, label: "Staging Public Base URL",
-            input_html: { data: { default: (proxy.default_staging_endpoint unless proxy.self_managed?) },
-                          readonly: !apicast_custom_urls?,
+            input_html: { class: 'proxy-endpoint',
+                          data: { default: (proxy.default_staging_endpoint unless proxy.self_managed?) },
+                          readonly: is_read_only,
                           placeholder: "https://api.#{parameterized_org_name_of_the_current_account}.com" },
             hint: apicast_endpoint_input_hint(service, environment: 'staging')
 
   = help_bubble( 'proxy_endpoint_bubble', t('api.integrations.proxy.proxy_endpoint_help_html'))
   = f.input :endpoint, label: "Production Public Base URL",
-            input_html: { data: { default: (proxy.default_production_endpoint unless proxy.self_managed?) },
-                          readonly: !apicast_custom_urls?,
+            input_html: { class: 'proxy-endpoint',
+                          data: { default: (proxy.default_production_endpoint unless proxy.self_managed?) },
+                          readonly: is_read_only,
                           placeholder: "https://api.#{parameterized_org_name_of_the_current_account}.com" },
             hint: apicast_endpoint_input_hint(service, environment: 'production')
   = help_bubble( 'proxy_endpoint_bubble', t('api.integrations.proxy.proxy_endpoint_help_html'))
