--- a/app/views/provider/admin/onboarding/wizard/backend_api/new.html.slim
+++ b/app/views/provider/admin/onboarding/wizard/backend_api/new.html.slim
@@ -13,7 +13,7 @@ ol.explain.fa-ul
       ' of your API and helps you to keep track of requests through
       strong> Metrics, Methods and Mapping Rules.
     p.text.text--up
-      ' Let's add your first Backend (If you don’t have a publicly accessible API yet, please
+      ' Let's add your first Backend (If you don’t have an accessible API yet, please
       a#use-example-api> href="#" title="Use Echo API" data-url=example_backend_url use the Echo test-API
       | ). We will add a catch-all Mapping Rule for you so all requests are allowed and each request will increase the default Metric 'Hits'.
 
