--- a/app/views/api/policies/edit.html.slim
+++ b/app/views/api/policies/edit.html.slim
@@ -3,5 +3,5 @@
 = semantic_form_for @proxy, url: admin_service_policies_path(@service) do |f|
   = render '/api/integrations/apicast/shared/policies', f: f
   = f.buttons do
-    = f.button t('formtastic.actions.policies.update'), button_html: {class: 'important-button update', name: 'update', value: '1',
-      id: 'policies-button-sav', title: 'Update Policies'} 
+    = f.button t('formtastic.actions.policies.update'), button_html: {class: "update #{@error ? 'disabled-button' : 'important-button'}", name: 'update', value: '1',
+      id: 'policies-button-sav', title: 'Update Policies', disabled: (@error ? true : nil) }
